erDiagram
    Authors {
        int author_id PK
        varchar author_name
    }
    Conferences {
        int conf_id PK
        varchar acronym
        varchar title
        varchar rank_category
        int primary_for
    }
    Journals {
        int journal_id PK
        varchar title
        varchar country
        decimal sjr_index
        varchar best_quartile
        int total_docs_3y
        int total_refs
        decimal cites_per_doc_2y
    }
    Conference_Articles {
        int article_id PK
        varchar original_dblp_id
        varchar title
        int year
        varchar pages
        int conf_id FK
    }
    Journal_Articles {
        int article_id PK
        varchar original_dblp_id
        varchar title
        int year
        varchar volume
        varchar pages
        int journal_id FK
    }
    Conference_Article_Authors {
        int article_id FK
        int author_id FK
    }
    Journal_Article_Authors {
        int article_id FK
        int author_id FK
    }
    Conferences ||--o{ Conference_Articles : has
    Journals ||--o{ Journal_Articles : has
    Conference_Articles ||--o{ Conference_Article_Authors : written_by
    Journal_Articles ||--o{ Journal_Article_Authors : written_by
    Authors ||--o{ Conference_Article_Authors : writes
    Authors ||--o{ Journal_Article_Authors : writes
